--- a/bugTracker/src/main/resources/application.properties
+++ b/bugTracker/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.springframework.security=INFO
+logging.level.org.springframework.security=DEBUG
